Login With JWT Token

--- a/MiniInventory.API/appsettings.json
+++ b/MiniInventory.API/appsettings.json
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JwtSettings": {
+    "Key": "this_is_a_super_secure_key_for_jwt_MediaSoft_$#@!Admin123",
+    "Issuer": "MiniInventoryAuth",
+    "Audience": "MiniInventoryUsers",
+    "DurationInMinutes": 60
+  },
   "AllowedHosts": "*"
 }
